--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Business Page</title>
     <script src="https://kit.fontawesome.com/653a1b1151.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,14 +18,19 @@
         </div>
 
         <div class="head-nav">
-            <h4 class="nav">Home</h4>
-            <h4 class="nav">Products</h4>
-            <h4 class="nav">sign Up</h4>
-            <h4 class="nav">Log In</h4>
-            <h4><i class="fa-solid fa-magnifying-glass"></i></h4>
-            <h4><i class="fa-solid fa-cart-shopping"></i></h4>
-        </div>
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">Sign Up</a>
+            <a href="Log in"></a>
+            <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+            <a><i class="fa-solid fa-cart-shopping"></i></a>
 
+
+
+
+
+
+        </div>
 
 
 
@@ -83,9 +88,9 @@
 
 
         <div class="first-card">
-            <img class="product-img" src="images/tripod.png" alt="" srcset="">
-            <h1>Flex Tripod</h1>
-            <p style="font-size: 30px;">$50.48</p>
+            <img class="product-img" src="images/mic.png" alt="" srcset="">
+            <h1>Microphone</h1>
+            <p style="font-size: 30px;">$120.25</p>
             <div class="star">
                 <p><i class="fa-solid fa-star"></i></p>
                 <p><i class="fa-solid fa-star"></i></p>
@@ -98,9 +103,9 @@
         </div>
 
         <div class="first-card">
-            <img class="product-img" src="images/tripod.png" alt="" srcset="">
-            <h1>Flex Tripod</h1>
-            <p style="font-size: 30px;">$50.48</p>
+            <img class="product-img" src="images/airpod.png" alt="" srcset="">
+            <h1>Airbuds</h1>
+            <p style="font-size: 30px;">$100</p>
             <div class="star">
                 <p><i class="fa-solid fa-star"></i></p>
                 <p><i class="fa-solid fa-star"></i></p>
@@ -113,9 +118,9 @@
         </div>
 
         <div class="first-card">
-            <img class="product-img" src="images/tripod.png" alt="" srcset="">
-            <h1>Flex Tripod</h1>
-            <p style="font-size: 30px;">$50.48</p>
+            <img class="product-img" src="images/lights.png" alt="" srcset="">
+            <h1>Lights</h1>
+            <p style="font-size: 30px;">$150.48</p>
             <div class="star">
                 <p><i class="fa-solid fa-star"></i></p>
                 <p><i class="fa-solid fa-star"></i></p>
@@ -128,9 +133,9 @@
         </div>
 
         <div class="first-card">
-            <img class="product-img" src="images/tripod.png" alt="" srcset="">
-            <h1>Flex Tripod</h1>
-            <p style="font-size: 30px;">$50.48</p>
+            <img class="product-img" src="images/drone.png" alt="" srcset="">
+            <h1>Drone</h1>
+            <p style="font-size: 30px;">$200</p>
             <div class="star">
                 <p><i class="fa-solid fa-star"></i></p>
                 <p><i class="fa-solid fa-star"></i></p>
@@ -143,9 +148,9 @@
         </div>
 
         <div class="first-card">
-            <img class="product-img" src="images/tripod.png" alt="" srcset="">
-            <h1>Flex Tripod</h1>
-            <p style="font-size: 30px;">$50.48</p>
+            <img class="product-img" src="images/single-light.png" alt="" srcset="">
+            <h1>single-light</h1>
+            <p style="font-size: 30px;">$60</p>
             <div class="star">
                 <p><i class="fa-solid fa-star"></i></p>
                 <p><i class="fa-solid fa-star"></i></p>
@@ -158,12 +163,52 @@
         </div>
     </div>
     <div class="see-more">
-        <h3>See More <i class="fa-solid fa-arrow-right-long"></i></h3>
+        <a href="">See More <i class="fa-solid fa-arrow-right-long"></i></a>
+    </div>
+
+    <div class="last-part">
+        <div class="last-img">
+            <img class="last-img" src="images/gear.png" alt="" srcset="">
+        </div>
+
+        <div class="explaination">
+            <h1>
+                Featured products at one place
+            </h1>
+
+
+            <span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsa reiciendis accusamus, sint
+                    ad
+                    voluptates. Perferendis, quos? Commodi aperiam tempora eaque quisquam ipsa corporis quaerat
+                    molestiae
+                    blanditiis. Deserunt, beatae modi. </h3><br>
+            </span>
+
+            <span>
+                <button class="join">Join Now</button>
+            </span>
+
+        </div>
     </div>
 
 
+    <footer>
+        <div class="finishing">
+            <div class="finishing-explaination">
+                <h2>Influencer Products</h2>
+                <h5>copyright © 2020 influencer products <br>
+                    All rights reserved</h5>
+            </div>
 
-    </div>
+            <div class="social-media">
+                <p><i class="fa-brands fa-instagram"></i></p>
+                <p><i class="fa-brands fa-facebook"></i></p>
+                <p><i class="fa-brands fa-twitter"></i></p>
+                <p><i class="fa-brands fa-youtube"></i></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
